[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites_textures/Mullar_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Uncategorized/light.png" type="Texture" id=3]
[ext_resource path="res://SFX/Ambient/chimes.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Ambient/wind_dry.wav" type="AudioStream" id=5]
[ext_resource path="res://Uncategorized/shadow.png" type="Texture" id=6]
[ext_resource path="res://SFX/Ambient/bg_chimes.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/Ambient/walking.wav" type="AudioStream" id=8]
[ext_resource path="res://Scripts/Trail.gd" type="Script" id=9]
[ext_resource path="res://Uncategorized/footsteps.png" type="Texture" id=10]
[ext_resource path="res://SFX/Objects/blurp.wav" type="AudioStream" id=11]
[ext_resource path="res://SFX/Objects/shake.wav" type="AudioStream" id=12]
[ext_resource path="res://SFX/Objects/tent_close.wav" type="AudioStream" id=13]
[ext_resource path="res://SFX/Objects/tent_open.wav" type="AudioStream" id=14]
[ext_resource path="res://MC_frames/løb10.png" type="Texture" id=15]
[ext_resource path="res://MC_frames/løb6.png" type="Texture" id=16]
[ext_resource path="res://MC_frames/løb4.png" type="Texture" id=17]
[ext_resource path="res://MC_frames/løb7.png" type="Texture" id=18]
[ext_resource path="res://MC_frames/løb9.png" type="Texture" id=19]
[ext_resource path="res://MC_frames/løb8.png" type="Texture" id=20]
[ext_resource path="res://MC_frames/løb2.png" type="Texture" id=21]
[ext_resource path="res://MC_frames/løb3.png" type="Texture" id=22]
[ext_resource path="res://MC_frames/løb5.png" type="Texture" id=23]
[ext_resource path="res://MC_frames/løb1.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.748344, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="RigidBody2D"]
z_index = 2
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 4.16592, 12.2318, 4.83409, 6.77509, 5.05681, 3.65694, -5.29988, 3.54558, -5.29988, 6.99781, -4.63171, 11.8978 )

[node name="Idle" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( -2.33862, 5.0113 )
texture = ExtResource( 3 )
texture_scale = 0.3
energy = 0.75
shadow_enabled = true
shadow_color = Color( 0.85098, 0, 1, 0 )
shadow_gradient_length = 2.0
shadow_filter = 4
shadow_filter_smooth = 5.0

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( -2.6727, 3.89767 )
texture = ExtResource( 3 )
texture_scale = 0.75
energy = 0.75
shadow_color = Color( 0.85098, 0, 1, 0 )
shadow_gradient_length = 2.0
shadow_filter = 4
shadow_filter_smooth = 5.0

[node name="Run_anim" type="AnimatedSprite" parent="."]
position = Vector2( 1.56164e-05, -3.84055 )
scale = Vector2( 0.045, 0.045 )
frames = SubResource( 1 )
frame = 9
speed_scale = 2.4
playing = true

[node name="Chimes" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Winddry" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true

[node name="shadow" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -0.297302, 14.8652 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="bg_chimes" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="shake" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0
pitch_scale = 2.0
autoplay = true

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
modulate = Color( 1, 1, 1, 0.392157 )
show_behind_parent = true
position = Vector2( 0, 15 )
z_index = -1
width = 8.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 2 )
texture = ExtResource( 10 )
texture_mode = 1
script = ExtResource( 9 )
trailLength = 50

[node name="text_continue" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="tent_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="tent_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
